# raylib-game-template

projects/VS2022/: CMakeLists.txt  raylib_game_template.sln
projects/VS2022/raylib_empty/: CMakeLists.txt  raylib_empty.cpp  raylib_empty.h
projects/VS2022/raylib_game/: star_field.fs  star_field_shadertoy.fs  stars.fs
src/: raylib_game.aps  raylib_game.c  screen_gameplay.c
